syntax = "proto3";

package JT809.GrpcProtos;

// 809车辆定位信息
message JT809GpsPosition {
	// 车牌号
	string Vno = 1;
	// 车牌颜色
	int32 VColor = 2;
	// 来源
	string FromChannel = 3;
	// 该字段标识传输的定位信息是否使用国家测绘局批准的地图保密插件进行加密。
	int32 Encrypt = 4;
	// 定位时间
    int64 GpsTime = 5;
	// 经度，单位为 1*10^-6 度。
    int64 Lon = 6;
	// 纬度，单位为 1*10^-6 度。
	int64 Lat = 7;
	// 速度，指卫星定位车载终端设备上传的行车速度信息，为必填项。单位为千米每小时（km/h）。
	int32 Vec1 = 13;
	// 行驶记录速度，指车辆行驶记录设备上传的行车速度 信息，为必填项。单位为千米每小时（km/h）。
	int32 Vec2 = 14;
	// 车辆当前总里程数，值车辆上传的行车里程数。单位单位为千米（km）
	int32 Vec3 = 15;
	// 方向，0-359，单位为度（。），正北为 0，顺时针。
	int32 Direction = 16;
	// 海拔高度，单位为米（m）。
	int32 Altitude = 17;
	// 车辆状态
	int32 State = 18;
	// 报警状态
	int32 Alarm = 19;
}